--- a/android/hug/app/src/main/res/layout/activity_register.xml
+++ b/android/hug/app/src/main/res/layout/activity_register.xml
@@ -15,12 +15,19 @@
 
         <ImageView
             android:id="@+id/logo"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_marginBottom="20dp"
             android:padding="10dp"
             android:layout_gravity="center_horizontal"
-            android:src="@drawable/littlogo"/>
+            android:src="@mipmap/ic_logo_outline"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:text="@string/app_name"
+            android:textSize="30sp"
+            android:textColor="@color/colorPrimaryDark"/>
 
         <EditText
             android:id="@+id/username_field"
