--- a/android/hug/app/src/main/res/layout/main_activity.xml
+++ b/android/hug/app/src/main/res/layout/main_activity.xml
@@ -35,6 +35,27 @@
                     android:visibility="gone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
+                <LinearLayout
+                    android:id="@+id/button_select"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:gravity="center">
+                    <ImageView
+                        android:id="@+id/love"
+                        android:layout_width="75dp"
+                        android:layout_height="75dp"
+                        android:src="@mipmap/ic_love"
+                        android:layout_margin="10dp"
+                        android:visibility="gone"/>
+                    <ImageView
+                        android:id="@+id/clock"
+                        android:layout_width="75dp"
+                        android:layout_height="75dp"
+                        android:layout_margin="10dp"
+                        android:visibility="gone"
+                        android:src="@mipmap/ic_clock"/>
+                </LinearLayout>
             </RelativeLayout>
         </FrameLayout>
         <!-- The navigation drawer -->
